--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IntelliSummarizer</title>
+  <title>CN Project</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 </head>
 <body>
   <header>
-    <h1>IntelliSummarizer</h1>
-    <p>Your focused platform for entrance exam preparation</p>
+    <h1>DHCP Server Configeration with router through different topologies.</h1>
+    <h3>Introduction</h3>
+    <p>This will be the introduction</p>
   </header>
 
-  <main class="card-container">
-    <a href="internet-rag.html" class="card">Internet RAG</a>
-    <a href="local-rag.html" class="card">Local RAG</a>
-    <a href="question-maker.html" class="card">Question Maker</a>
-    <a href="chat-model.html" class="card">Chat Model</a>
+
   </main>
 </body>
 </html>
