--- a/index.html
+++ b/index.html
@@ -56,6 +56,27 @@
       <p>All devices successfully obtain IP addresses automatically from the router. Network communication is verified through successful pings, confirming the DHCP setup is functional.</p>
     </section>
   </main>
+<section class="card">
+  <h2>📷 Simulation & Results</h2>
+  <div class="image-grid">
+    <figure>
+      <img src="images/simulation1.png" alt="Simulation Screenshot 1">
+      <figcaption>DHCP IP assignment for PC0</figcaption>
+    </figure>
+    <figure>
+      <img src="images/simulation2.png" alt="Simulation Screenshot 2">
+      <figcaption>Packet flow verification</figcaption>
+    </figure>
+    <figure>
+      <img src="images/simulation3.png" alt="Simulation Screenshot 3">
+      <figcaption>Ping test between PCs</figcaption>
+    </figure>
+    <figure>
+      <img src="images/simulation4.png" alt="Simulation Screenshot 4">
+      <figcaption>Router configuration terminal</figcaption>
+    </figure>
+  </div>
+</section>
 
   <footer>
     <p>By Teammates</p>
